--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
+#synthesis-logo  {
+  text-align: center;
+  margin: 10px;
+}
+
+#synthesis-logo img  {
+  height: 50px;
+}
+
 #status  {
   color: green;
 }
@@ -7,12 +16,50 @@ body {
 }
 
 .box {
-  border: 1px rgba(0, 0, 0, 1.0) solid;
+  /*border: 1px rgba(0, 0, 0, 1.0) solid;*/
   padding: 10px;
+  max-width: 440px;
+  margin: 0 auto;
+  /*background-image: url(../img/air.jpg);*/
+  background-size: cover;
+  /*filter: url(../img/air.jpg);
+  filter: blur(5px);*/
+  /*filter: alpha(opacity=50);*/
+  background-color: rgba(76, 127, 178, 0.3);
 }
 
 .box-inner {
   border: 1px rgba(0, 0, 0, 0.2) solid;
   margin: 10px;
-  padding: 10px;
+  padding: 5px;
+  background-color: white;
+  opacity: 1.0;
+
+}
+
+#air-temperature-box  {
+  float: right;
+}
+
+h1  {
+  font-family: 'Work Sans', Arial, sans-serif;
+  font-size: 3.4em;
+  font-weight: 100;
+  margin: 0px 10px;
+}
+
+h2  {
+  color: rgba(0, 0, 0, 0.25);
+  font-family: 'Six Caps', Arial, sans-serif;
+  font-size: 2.2em;
+  font-weight: 100;
+  letter-spacing: 0.05em;
+  margin: 5px 10px 15px 10px;
+}
+
+h3  {
+  font-family: 'Work Sans', Arial, sans-serif;
+  font-size: 1em;
+  font-weight: 100;
+  margin: 5px 10px;
 }
