Add 'airCO2SensorMock.js' and 'airCO2SensorMock-test.js'. Update 'client.js' and 'index.html' to react. WIP...
modified:   client/client.js
modified:   public/css/styles.css
modified:   public/index.html
modified:   public/main.bundle.js
modified:   server.js
new file:   server/airCO2SensorMock.js
new file:   test/airCo2SensorMock-test.js

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,10 @@ body {
   float: right;
 }
 
+#co2-display-box  {
+  float: right;
+}
+
 h1  {
   font-family: 'Work Sans', Arial, sans-serif;
   font-size: 3.4em;
